udpate nav bar and quick links homepage

--- a/index.html
+++ b/index.html
@@ -8,26 +8,17 @@
     <link rel="stylesheet" href="">
     <link rel="stylesheet" href="./assets/style.css">
 
-    <div class="navbar navbar-fixed-top container-fluid" id="navbar">
-      <div class="navbar-header">
-          <button type="button" class="navbar-toggle navbar-default" data-toggle="collapse" data-target="#myNavbar">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-          </button>
-          
-      </div>
-      <div class="collapse navbar-right navbar-collapse" id="myNavbar">
-          <ul class="nav navbar-nav">
-              <li>Profile</li>
-              <li>Projects</li>
-              <li>Resume</li>
-              <li>Contact Info</li>
-              <li>Other</li>
-          </ul>
-      </div>
-  </div>
-  
+    <div class ="navbar">
+      <a href="#" class="logo">Logoo</a>
+      <ul class="nav">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#demo">Demo</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+    
   
 
 </head>
@@ -42,6 +33,15 @@
  
   <canvas id="canvas1"></canvas>
   </section>
+
+  <div class="info">
+    <a class="home-name">Elizabeth Kovalchick</a>
+      <ul class="home-info">
+        <li><a href="#">Email</a></li>
+        <li><a href="#">LinkedIn</a></li>
+        <li><a href="https://www.linkedin.com/in/elizabeth-kovalchick-3b9956162/">Resume</a></li>
+
+  </div>
 
   
 
