update resume and projects

--- a/about.html
+++ b/about.html
@@ -270,7 +270,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                 </div>
                 <div class="col-lg-12">
                   <div class="main-button">
-                    <a href="resume.html">Go To resume</a>
+                    <a href="./assets/Elizabeth Kovalchick Resume__.pdf">Go To resume</a>
                   </div>
                 </div>
               </div>
