--- a/projects.html
+++ b/projects.html
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="assets/css/owl.css">
   <link rel="stylesheet" href="assets/css/animate.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
+  
   <!--
 
 TemplateMo 579 Cyborg Gaming
@@ -95,13 +96,14 @@ https://templatemo.com/tm-579-cyborg-gaming
               <div class="feature-banner header-text">
                 <div class="row">
                   <div class="col-lg-4">
-                    <img src="assets/images/feature-left.jpg" alt="" style="border-radius: 23px;">
+
+                    <!-- <img src="assets/project_images/Cosmic_Jamz.png" alt="" style="border-radius: 23px;"> -->
                   </div>
                   <div class="col-lg-8">
                     <div class="thumb">
-                      <img src="assets/images/feature-right.jpg" alt="" style="border-radius: 23px;">
-                      <a href="https://www.youtube.com/watch?v=r1b03uKWk_M" target="_blank"><i
-                          class="fa fa-play"></i></a>
+                      <!-- <img src="assets/project_images/Cosmic_Jamz.png" alt="" style="border-radius: 23px;"> -->
+                      <!-- <video width="800" height="400" controls> -->
+                        <!-- <source src="./assets/images/Untitled_ Aug 3, 2023 9_16 PM.webm" type="video/mp4"></a></video> -->
                     </div>
                   </div>
                 </div>
@@ -142,14 +144,14 @@ https://templatemo.com/tm-579-cyborg-gaming
                       </div>
                     </div>
                     <div class="col-lg-4">
-                      <img src="assets/images/popular-01.jpg" alt="" style="border-radius: 23px; margin-bottom: 30px;">
+                      <img src="assets/project_Images/surfboard.png" alt="" style="border-radius: 23px; margin-bottom: 30px;">
                     </div>
                     <div class="col-lg-4">
-                      <img src="assets/images/popular-02.jpg" alt="" style="border-radius: 23px; margin-bottom: 30px;">
+                      <img src="assets/project_Images/surfboard.png" alt="" style="border-radius: 23px; margin-bottom: 30px;">
                     </div>
                     <div class="col-lg-4">
-                      <img src="assets/images/popular-03.jpg" alt="" style="border-radius: 23px;margin-bottom: 30px;">
-                      <a href="https://www.youtube.com/watch?v=r1b03uKWk_M" target="_blank"><i
+                      <img src="assets/project_Images/surfboard.png" alt="" style="border-radius: 23px;margin-bottom: 30px;">
+                      <a href="#" target="_blank"><i
                           class="fa fa-play"></i></a>
                     </div>
                     <div class="col-lg-12">
@@ -201,14 +203,14 @@ https://templatemo.com/tm-579-cyborg-gaming
                       </div>
                     </div>
                     <div class="col-lg-4">
-                      <img src="assets/images/popular-01.jpg" alt="" style="border-radius: 23px; margin-bottom: 30px;">
+                      <img src="assets/project_Images/cosmic_Jamz.png" alt="" style="border-radius: 23px; margin-bottom: 30px;">
                     </div>
                     <div class="col-lg-4">
-                      <img src="assets/images/popular-02.jpg" alt="" style="border-radius: 23px; margin-bottom: 30px;">
+                      <img src="assets/project_Images/cosmic_Jamz.png" alt="" style="border-radius: 23px; margin-bottom: 30px;">
                     </div>
                     <div class="col-lg-4">
-                      <img src="assets/images/popular-03.jpg" alt="" style="border-radius: 23px;margin-bottom: 30px;">
-                      <a href="https://www.youtube.com/watch?v=r1b03uKWk_M" target="_blank"><i
+                      <img src="assets/project_Images/cosmic_Jamz.png" alt="" style="border-radius: 23px;margin-bottom: 30px;">
+                      <a href="#" target="_blank"><i
                           class="fa fa-play"></i></a>
                     </div>
                     <div class="col-lg-12">
@@ -267,14 +269,14 @@ https://templatemo.com/tm-579-cyborg-gaming
                       </div>
                     </div>
                     <div class="col-lg-4">
-                      <img src="assets/images/popular-01.jpg" alt="" style="border-radius: 23px; margin-bottom: 30px;">
+                      <img src="assets/project_Images/readME_gen_w_boarder.png" alt="" style="border-radius: 23px; margin-bottom: 30px;">
                     </div>
                     <div class="col-lg-4">
-                      <img src="assets/images/popular-02.jpg" alt="" style="border-radius: 23px; margin-bottom: 30px;">
+                      <img src="assets/project_Images/readME_gen_w_boarder.png" alt="" style="border-radius: 23px; margin-bottom: 30px;">
                     </div>
                     <div class="col-lg-4">
-                      <img src="assets/images/popular-03.jpg" alt="" style="border-radius: 23px;margin-bottom: 30px;">
-                      <a href="https://drive.google.com/file/d/1P4mjASxQAjQos4b5mJvIofa1BNJg8Kj4/view"
+                      <img src="assets/project_Images/readME_gen_w_boarder.png" alt="" style="border-radius: 23px;margin-bottom: 30px;">
+                      <a href="#"
                         target="_blank"><i class="fa fa-play"></i></a>
                     </div>
                     <div class="col-lg-12">
@@ -286,7 +288,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                     </div>
                     <div class="col-lg-12">
                       <div class="main-border-button">
-                        <a href="https://drive.google.com/file/d/1P4mjASxQAjQos4b5mJvIofa1BNJg8Kj4/view">Read-Me
+                        <a href="https://github.com/ekovalchick/read_me_gen">Read-Me
                           Generator</a>
                       </div>
                     </div>
@@ -340,15 +342,12 @@ https://templatemo.com/tm-579-cyborg-gaming
                         target="_blank"><i class="fa fa-play"></i></a>
                     </div>
                     <div class="col-lg-12">
-                      <p>This project allows you to dynamically create a readme file. The terminal will prompt the user
-                        specific questions regarding a typical readMe file. The user will then fill out each question
-                        specifically towards their project they will be using this app for. In the output file a
-                        personalized readme will be created.
+                      <p>This project allows you to keep track of employee information by tracking their role, department, and salary. You can also view all the roles, departments and update these specifications. The user will download the necessary programs, and run npm start and the terminal will give the user specific prompts and update or view information the user selects.
                       </p>
                     </div>
                     <div class="col-lg-12">
                       <div class="main-border-button">
-                        <a href="https://drive.google.com/file/d/1S5ybZMoRqBm0LqoOfQhsyhR3NbvFKWex/view">Employee
+                        <a href="https://github.com/ekovalchick/employee_tracker">Employee
                           Tracker</a>
                       </div>
                     </div>
@@ -391,13 +390,13 @@ https://templatemo.com/tm-579-cyborg-gaming
                       </div>
                     </div>
                     <div class="col-lg-4">
-                      <img src="assets/images/popular-01.jpg" alt="" style="border-radius: 23px; margin-bottom: 30px;">
+                      <img src="assets/project_Images/weather _app.png" alt="" style="border-radius: 23px; margin-bottom: 30px;">
                     </div>
                     <div class="col-lg-4">
-                      <img src="assets/images/popular-02.jpg" alt="" style="border-radius: 23px; margin-bottom: 30px;">
+                      <img src="assets/project_Images/weather _app.png" alt="" style="border-radius: 23px; margin-bottom: 30px;">
                     </div>
                     <div class="col-lg-4">
-                      <img src="assets/images/popular-03.jpg" alt="" style="border-radius: 23px;margin-bottom: 30px;">
+                      <img src="assets/project_Images/weather _app.png" alt="" style="border-radius: 23px;margin-bottom: 30px;">
                       <a href="#"
                         target="_blank"><i class="fa fa-play"></i></a>
                     </div>
@@ -407,7 +406,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                     </div>
                     <div class="col-lg-12">
                       <div class="main-border-button">
-                        <a href="#">Weather Dashboard</a>
+                        <a href="https://ekovalchick.github.io/Weather_App/">Weather Dashboard</a>
                       </div>
                     </div>
                   </div>
@@ -418,7 +417,7 @@ https://templatemo.com/tm-579-cyborg-gaming
           <!-- ***** projects End ***** -->
 
           <!-- ***** Other Start ***** -->
-          <div class="other-games">
+          <!-- <div class="other-games">
             <div class="row">
               <div class="col-lg-12">
                 <div class="heading-section">
@@ -486,7 +485,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
           <!-- ***** Other End ***** -->
 
         </div>
@@ -518,6 +517,7 @@ https://templatemo.com/tm-579-cyborg-gaming
   <script src="assets/js/tabs.js"></script>
   <script src="assets/js/popup.js"></script>
   <script src="assets/js/custom.js"></script>
+  <script src="./assets/js/lava.js"></script>
 
 
 </body>
