--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                         <li><a href="about.html">about</a></li>
                         <li><a href="projects.html">projects</a></li>
                         
-                        <li><a href="resume.html">resume <img src="assets/images/profile-header.jpg" alt=""></a></li>
+                        <li><a href="./assets/Elizabeth Kovalchick Resume__.pdf">resume <img src="assets/images/avatar-01.jpg" alt=""></a></li>
                     </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -180,7 +180,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="col-lg-12">
                     <div class="main-button">
-                      <a href="resume.html">Resume</a>
+                      <a href="./assets/Elizabeth Kovalchick Resume__.pdf">Resume</a>
                     </div>
                   </div>
                 </div>
