--- a/projects.html
+++ b/projects.html
@@ -171,6 +171,64 @@ https://templatemo.com/tm-579-cyborg-gaming
             </div>
           </div>
           <!-- ***** projects End ***** -->
+
+                    <!-- ***** projects Start ***** -->
+                    <div class="game-projects">
+                      <div class="row">
+                        <div class="col-lg-12">
+                          <h2>snapTask</h2>
+                        </div>
+                        <div class="col-lg-12">
+                          <div class="content">
+                            <div class="row">
+                              <div class="col-lg-6">
+                                <div class="left-info">
+                                  <div class="left">
+                                    <h4>Project 3 @ UM</h4>
+                                    <span>snapTask</span>
+                                  </div>
+                                  <ul>
+                                    <li><i class="fa fa-star"></i> 4.8</li>
+                                    <li><i class="fa fa-download"></i> 2.3M</li>
+                                  </ul>
+                                </div>
+                              </div>
+                              <div class="col-lg-6">
+                                <div class="right-info">
+                                  <ul>
+                                    <li><i class="fa fa-star"></i> 4.8</li>
+                                    <li><i class="fa fa-download"></i> 2.3M</li>
+                                    <li><i class="fa fa-server"></i> 36GB</li>
+                                    <li><i class="fa fa-gamepad"></i> Action</li>
+                                  </ul>
+                                </div>
+                              </div>
+                              <div class="col-lg-4">
+                                <img src="assets/images/popular-01.jpg" alt="" style="border-radius: 23px; margin-bottom: 30px;">
+                              </div>
+                              <div class="col-lg-4">
+                                <img src="assets/images/popular-02.jpg" alt="" style="border-radius: 23px; margin-bottom: 30px;">
+                              </div>
+                              <div class="col-lg-4">
+                                <img src="assets/images/popular-03.jpg" alt="" style="border-radius: 23px;margin-bottom: 30px;">
+                                <a href="https://www.youtube.com/watch?v=r1b03uKWk_M" target="_blank"><i
+                                    class="fa fa-play"></i></a>
+                              </div>
+                              <div class="col-lg-12">
+                                <p>SnapTask, your ultimate task management solution! In the fast-paced world of project coordination, SnapTask stands out with its intuitive interface, allowing users to effortlessly create snaps (projects), input details, and add tasks for a streamlined workflow. Leveraging MongoDB, Apollo, GraphQL, and React, SnapTask ensures a secure and efficient user experience. Simplify your project management journey, stay organized, and achieve your goals with SnapTask. Welcome to a new era of efficient task tracking and completion! </p>
+                              </div>
+                              <div class="col-lg-12">
+                                <div class="main-border-button">
+                                  <a href="https://snaptaskproject-5d017683b569.herokuapp.com/">snapTask</a>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- ***** projects End ***** -->
+
           <!-- ***** projects Start ***** -->
           <div class="game-projects">
             <div class="row">
